documenta novas rodas de buscar data por minutagem
